# dotfiles

./: .env.example  .gitignore  .luacheckrc  .secretlintignore  .zshrc  CLAUDE.md  README.md  deploy.sh  flake.nix  orgagenda  package-lock.json  package.json  renovate.json  renovate.json5  setup-ubuntu.sh  setup.sh
.bin/: install.sh
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-assign.yml  build-wsl-release.yml  check.yml  ci.yml  lint.yml  rusty-book-manager-ci.yml  ubuntu.yml
claude/: setup_mcp.sh
claude/commands/: commit.md  review.md
config/claude/: CLAUDE.md  settings.json  statusline.sh
config/git/: config
config/nix/: flake.nix  home-common.nix  (+1 more)
nix/: flake.nix  home.nix
sandbox/rust-concept/: .env.example  Cargo.toml  README.md  docker-compose.yml
sandbox/rust-concept/src/: main.rs
sandbox/rusty-book-manager/: Cargo.toml  Makefile.toml  README.md  docker-compose.yml  wrangler.toml
sandbox/rusty-book-manager/adapter/: Cargo.toml
sandbox/rusty-book-manager/adapter/migrations/: 20241110091246_start.down.sql  20241110091246_start.up.sql
sandbox/rusty-book-manager/adapter/src/database/: mod.rs
sandbox/rusty-book-manager/adapter/src/repository/: health.rs
sandbox/rusty-book-manager/api/src/route/: health.rs
sandbox/rusty-book-manager/registry/src/: lib.rs
sandbox/rusty-book-manager/src/: main.rs
scripts/: format.sh  lint.sh  nix-fmt.sh  nix-test.sh  nvim-smoke-check-hook.lua  nvim-smoke-check-result.lua  nvim-smoke-test.sh  secretlint.sh
tmux/: tmux.conf
zsh/: p10k.zsh  plugins.zsh
(+366 files in other folders)
