[package]
name = "rusty-book-manager"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.75"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }

[dev-dependencies]
rstest = "0.18.2"
